--- a/packages/youtube_player_iframe/pubspec.yaml
+++ b/packages/youtube_player_iframe/pubspec.yaml
@@ -3,16 +3,19 @@ description: Flutter port of the official YouTube iFrame player API. Supports we
 version: 2.3.0
 repository: https://github.com/sarbagyastha/youtube_player_flutter
 homepage: https://github.com/sarbagyastha/youtube_player_flutter/tree/master/packages/youtube_player_iframe
+publish_to: none
 
 environment:
-  sdk: '>=2.17.0 <3.0.0'
-  flutter: '>=3.0.0'
+  sdk: ">=2.17.0 <3.0.0"
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_inappwebview: ^5.4.3+7
+  flutter_inappwebview:
+    git:
+      url: https://github.com/vixez/flutter_inappwebview.git
+      ref: fix-xcode-17
   url_launcher: ^6.1.2
 
 dev_dependencies:
