--- a/packages/youtube_player_iframe/pubspec.yaml
+++ b/packages/youtube_player_iframe/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
     sdk: flutter
   flutter_inappwebview:
     git:
-      url: https://github.com/vixez/flutter_inappwebview.git
-      ref: fix-xcode-17
+      url: https://github.com/marcomagno/flutter_inappwebview.git
+      ref: exposed-native-instance
   url_launcher: ^6.1.2
 
 dev_dependencies:
