Update `flutter_inappwebview` to v 6.1.5 on the same branch used by Tannico mobile app

--- a/packages/youtube_player_iframe/pubspec.yaml
+++ b/packages/youtube_player_iframe/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   flutter_inappwebview:
     git:
       url: https://github.com/marcomagno/flutter_inappwebview.git
-      ref: exposed-native-instance
+      ref: v6-exposed-native-instance # Using the same branch as the mobile app
+      path: flutter_inappwebview
   url_launcher: ^6.1.2
 
 dev_dependencies:
